# python-sample-package

./: .gitignore  Dockerfile  Makefile  README.md  entry_points.cfg  setup.cfg
src/sample/: hello.py  hello2.py
src/sample2/: goodbye.py  goodbye2.py
tests/: goodbye_test.py  hello_test.py
