[metadata]
name = sample
version = attr: sample.__version__
url = https://github.com/Tocyuki/python-sample-package
author = Tocyuki
author_email = tocguitar1@gmail.com
license_file = LICENSE
description = sample: Python Sample Package
long_description = file: README.md
test_suite = tests

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires =
entry_points = file: entry_points.cfg

[options.packages.find]
where = src